kubernetes/apps/default/plex/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: plex
      app.kubernetes.io/controller: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
        app.kubernetes.io/instance: plex
        app.kubernetes.io/controller: plex
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"
      containers:
        - name: app
          image: ghcr.io/home-operations/plex:1.43.1.10611@sha256:a9c3723cb31cc9621df27cf5801184c290293adf1df2bfaea4b8b6fc01dbfd96
          ports:
            - name: http
              containerPort: 32400
          startupProbe:
            tcpSocket:
              port: 32400
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 2000m
              memory: 4Gi
            limits:
              gpu.intel.com/i915: "1"
              cpu: 3000m
              memory: 12Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmpfs
              mountPath: /config/Library/Application Support/Plex Media Server/Logs
              subPath: logs
            - name: tmpfs
              mountPath: /transcode
              subPath: transcode
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: tmpfs
          emptyDir: {}
