kubernetes/apps/default/plex/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/controller: plex
    app.kubernetes.io/service: plex
  annotations:
    lbipam.cilium.io/ips: "10.0.30.34"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 32400
      targetPort: 32400
      protocol: TCP
  selector:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/controller: plex
