kubernetes/apps/default/plex/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: default
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - plex.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /library/streams
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove: ["Range"]
      backendRefs:
        - name: plex
          port: 32400
    - backendRefs:
        - name: plex
          port: 32400
